--- a/05-events/set-get-sync-attribute-and-property/index.html
+++ b/05-events/set-get-sync-attribute-and-property/index.html
@@ -6,6 +6,6 @@
         import './profile-card.js';
     </script>
 
-    <profile-card ></profile-card>
+    <profile-card the-first-name="Sally" the-last-name="Thornhill"></profile-card>
 </body>
 </html>
