--- a/06-library/01-ndc-show-post/index.html
+++ b/06-library/01-ndc-show-post/index.html
@@ -25,7 +25,8 @@
                 <!-- OUTPUT OF CUSTOM ELEMENT -->
                 <button class="w3-button w3-blue" id="btnChange">CHANGE POST TO ID:45</button>
                 <!-- WEB COMPONENT -->
-                <show-post postid="38"></show-post>
+                <show-post postid="38"/> 
+                <!-- most broswers allow self-closing custom tags if there is no slot content but check!-->
                 <!-- WEB COMPONENT -->
                 <script>
                 
