--- a/01-custom-elements/04-attributes.html
+++ b/01-custom-elements/04-attributes.html
@@ -42,6 +42,7 @@
             <div class="explanation">
                 <h1>04-attributes</h1>
                 <p>We can define any attribute name we want.</p>
+                <p>We can get/set Attribute from within the component.</p>
             </div>
             <div class="spacer"></div>
             <div id="output">
