--- a/03-shadow-dom/02-shadow-dom-template.html
+++ b/03-shadow-dom/02-shadow-dom-template.html
@@ -33,10 +33,7 @@
         constructor() {
             super();
             const shadowRoot = this.attachShadow({mode: 'open'});
-            this.shadowRoot.appendChild(template.content.cloneNode(true));
-            // We can also set the template in the class itself
-            // We will see this a lot...
-            // this.shadowRoot.innerHTML = ``;
+            this.shadowRoot.appendChild(template.content.cloneNode(true)); // true means deep clone
         }
     }
    
