--- a/01-custom-elements/02-simple-css-light.html
+++ b/01-custom-elements/02-simple-css-light.html
@@ -29,7 +29,7 @@
                 console.log('Component created…');
             }
             connectedCallback() { // this as an event when the component is attached to the DOM
-                this.innerHTML = '<h1>This is my web component</h1>'; // this refers to the class component.
+                this.innerHTML = '<h1 style="color:orange;">This is my web component</h1>'; // this refers to the class component.
                 console.log('Component now part of DOM…');
             }
         }
