edit import css via js

--- a/04-css/css-02-import-js.html
+++ b/04-css/css-02-import-js.html
@@ -18,6 +18,7 @@
         :root {
             --primary-color: green;
             --primary-size: 25px;
+            --background: #ccc;
         }
            
         my-component {
