--- a/04-css/css-03-slotted.html
+++ b/04-css/css-03-slotted.html
@@ -113,6 +113,7 @@
                 <!-- OUTPUT OF CUSTOM ELEMENT -->
                 <my-card>
                     <!-- This is slotted text -->
+                    <!-- slotted text is Light DOM projected into the Shadow DOM -->
                     <span slot="first">John</span><br>
                     <span slot="title">Engineer<br><span id="nested">Nested text NOT styled by ::slotted - only top level.</span></span></span><br>
                     <span slot="email">john@example.com</span>
