reactivate public function

--- a/06-library/01-ndc-show-post/index.html
+++ b/06-library/01-ndc-show-post/index.html
@@ -34,7 +34,7 @@
                     btn.addEventListener('click', function() {
                         // <show-post /> is an HTML tag
                         document.querySelector('show-post').setAttribute('postid', 45)
-                        document.querySelector('show-post').publicMethod('We can access the component via its methods');
+                        document.querySelector('show-post').publicMethod('message argument in public function');
                     })
                    
                 </script>
