--- a/03-shadow-dom/04-named-slot.html
+++ b/03-shadow-dom/04-named-slot.html
@@ -71,7 +71,8 @@
             <div id="output">
                 <!-- OUTPUT OF CUSTOM ELEMENT -->
                 <my-card>
-                     <!-- named slots. order of span elements not important as
+                     <!-- 
+                        named slots. order of span elements not important as
                         the span is linked to component slot by the id
                      -->
                     
