--- a/05-events/06-showAllPostsRange.html
+++ b/05-events/06-showAllPostsRange.html
@@ -39,6 +39,7 @@
         However, if we are changing these values programatically then it is best to have just one attribute because the event is fired every time an attribute is changed and this might involve an AJX request for data.
       </p>
       <p>Thus it is better to combine more than one property into one object, JSON.stringify it and pass it to the component.</p>
+      <p><b>disconnectedCallback life cycle event dmonstrated...</b></p>
       <script>
         const objRange =  {
           min: 33,
