--- a/04-css/css-04-host.html
+++ b/04-css/css-04-host.html
@@ -47,15 +47,17 @@
             width:100%;
          
           } 
-          :host(.important) {
+          /*
+          :host(.important)  {
            color:red;
            display: block; /*important*/
            padding:50px;
            border: 2px dotted red;
-           background:yellow;
+           background: yellow;
           }
           :host(.important) #hosted{
-              color:font-size:3rem;
+              color: orange;
+              font-size:3rem;
           }
           :host(#showHost) {
            color:purple;
@@ -68,7 +70,7 @@
            color:black;
            display: block; /*important*/
            padding:50px;
-           border: 8px dashed red;
+           border: 8px dashed brown;
            background:red ;
           }
           :host([cool]) {
@@ -78,6 +80,7 @@
            border: 8px dashed green;;
            background: #ccc ;
           }
+         */
         </style>
         <div class="card">
           <slot>Some default</slot>
