--- a/06-library/03-ndc-show-all-posts/showAllPostsUrl.html
+++ b/06-library/03-ndc-show-all-posts/showAllPostsUrl.html
@@ -35,7 +35,7 @@
     <button id="btn"class="w3-button w3-blue" style="width:300px">Public Method in component<br>Shows Cat26</button>
 
     <!-- WEB COMPONENT -->
-    <show-all-posts-url url= "../_data/cat25.json"></show-all-posts-url>
+    <show-all-posts-url url= "https://central.wordcamp.org/wp-json/wp/v2/posts"></show-all-posts-url>
     <!-- WEB COMPONENT -->
     
     <script>
