--- a/06-library/06-ndc-blog/index.html
+++ b/06-library/06-ndc-blog/index.html
@@ -25,7 +25,7 @@
       grid-gap: 30px;
       border: 3px solid #2196f3;
       border-radius: 10px;
-      background: #ccc;
+      background: #fff;
       padding:10px;
     }
 
@@ -65,7 +65,7 @@
           //status.className = "offline";
           status.innerHTML = "<span class='offline' style='color:red;font-weight:bold;font-size:1.5rem;'>YOU ARE NOW: " + condition.toUpperCase() + " - external links will not work but posts will...</span>";
           // set background to grey to emphasise offline
-          document.body.style.backgroundColor = "#ccc";
+          document.body.style.backgroundColor = "#fff";
         }
         else {
           status.className = "";
