--- a/06-library/20-ndc-site/cat.html
+++ b/06-library/20-ndc-site/cat.html
@@ -16,7 +16,8 @@
    </nav>
 
    <main>
-
+      <p class="code">&lt;show-all-posts-category&gt;&lt;/show-all-posts-category&gt;</p>
+      <p class="code">&lt;script src="showAllPostsCategory.js"&gt;&lt;/script&gt;</p>
       <!-- WEB COMPONENT -->
 
       <show-all-posts-category></show-all-posts-category>
