--- a/06-library/20-ndc-site/index.html
+++ b/06-library/20-ndc-site/index.html
@@ -2,43 +2,89 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-   <link href="site.css" rel="stylesheet">
-   <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="site.css" rel="stylesheet">
+    <title>Document</title>
+ 
+    <script>
+        const SERVICE_WORKER = './sw.js';
+        // Register the service worker on every page.
+        // Promised based.
+        if ('serviceWorker' in navigator) {
+           console.log("Registering...");
+           navigator.serviceWorker.register(SERVICE_WORKER).then(function (registration) {
+              console.log("Registration of " + SERVICE_WORKER + " was successful.");
+           }).catch(function (error) {
+              //test by using xsw.js
+              console.log("ERROR registering service worker: ", error)
+           });
+        }
+     </script>
 </head>
 
 <body>
-   <nav>
-      <script src="../15-ndc-navbar/nav.js"></script>
-      <my-navbar></my-navbar>
-   </nav>
-
-    
-   
-   <main>
-      <button class="w3-button w3-blue" id="btnChange">CHANGE POST TO ID:45</button>
-      <show-post postid="38"/> 
+    <nav>
+        <script src="../15-ndc-navbar/nav.js"></script>
+        <my-navbar></my-navbar>
+    </nav>
 
 
-      <script>
-       
-         const btn = document.getElementById('btnChange');
-         btn.addEventListener('click', function () {
-            // <show-post /> is an HTML tag
-            document.querySelector('show-post').setAttribute('postid', 45)
-            document.querySelector('show-post').publicMethod('We can access the component via its methods');
-         })
-      </script>
 
-   </main>
-   <script type='module'>
-      import '../01-ndc-show-post/showPost.js';
+    <main>
+        <div class="wrapper">
+            <div class="explanation">
+                <h1>WordPress as a micro front end service on an HTML site.</h1>
+                <h2>Using the WP Rest API and Web Components to deploy content and functionality with just two lines of
+                    code!</h2>
+                <br>
+                <p>Each of these pages uses custom HTML tags to render content and functionality from a WP site hosted
+                    on another domain. Use VIEW SOURCE to see how highly functionaly components can be used with just
+                    two lines of code.
+                </p>
+                <p class="code">&lt;show-post id="106"&gt;&lt;/show-post&gt;</p>
+                <p class="code">&lt;script src="showPost.js"&gt;&lt;/script&gt;</p>
+                <p>The navigation bar and back-to-top feature (on other pages) are also Web Components.</p>
+                <h1>01-ndc-show-post</h1>
+                <h2>This returns one post based on a JSON file for one post.</h2>
+                <br>
+                <p>We are using CSS custom properties defined in ../_css/library.css</p>
+                <p>In DEV > ELEMENTS we can change postid to 106 or 109 to get a new post.</p>
+
+            </div>
+            <div class="spacer"></div>
+            <div id="output">
+                <!-- OUTPUT OF CUSTOM ELEMENT -->
+                <br>
+                <button class="w3-button w3-blue" id="btnChange">CHANGE POST TO ID: 109</button>
+                <!-- WEB COMPONENT -->
+                <show-post postid="106"></show-post>
+                <!-- WEB COMPONENT -->
+                <script>
+                    const btn = document.getElementById('btnChange');
+                    btn.addEventListener('click', function () {
+                        // <show-post /> is an HTML tag
+                        document.querySelector('show-post').setAttribute('postid', 109)
+                        document.querySelector('show-post').publicMethod(
+                            'We can access the component via its methods');
+                    })
+                </script>
+
+                </section>
+            </div>
+
+        </div>
+    </main>
+
+    <script type='module'>
+        import '../01-ndc-show-post/showPost.js';
   </script>
-   <wp-indexeddb-load-local cat="1"></wp-indexeddb-load-local>
-
- <script src="../10-ndc-indexeddb/wp-indexeddb-load-local.js" type="module"></script>
+    <wp-indexeddb-load cat="6"></wp-indexeddb-load>
+    <wp-indexeddb-load cat="7"></wp-indexeddb-load>
+    <wp-indexeddb-load cat="24"></wp-indexeddb-load>
+    <wp-indexeddb-load cat="25"></wp-indexeddb-load>
+    <script src="../10-ndc-indexeddb/wp-indexeddb-load.js" type="module"></script>
 
 </body>
 
