--- a/06-library/20-ndc-site/lazy.html
+++ b/06-library/20-ndc-site/lazy.html
@@ -15,6 +15,9 @@
       left: 0px;
       /* background-color: rgba(224, 218, 211, 0.3); */
     }
+    p {
+      font-size:28px;
+    }
   </style>
   <title>Document</title>
 </head>
@@ -27,9 +30,11 @@
     <script src="../11-ndc-lazyload/lazyLoadComponent.js"></script>
     <script src="../11-ndc-lazyload/lazyLoadImage.js"></script>
     <section class="a">
-      <div style="font-size:24px;">
-        <p>This uses a lazy load image Web Component with the requirement that lazy load image needs to crossthreshold 350px from bottom.
+      <div >
+        <p >This uses a lazy load image Web Component with the requirement that lazy load image crosses the red bar. In production, bar would be below the fold.
         </p>
+        <p class="code">&lt;wp-lazy-load-component postid="36"&gt;&lt;/wp-lazy-load-component&gt;</p>
+        <p class="code">&lt;script src="lazyLoadComponent.js"&gt;&lt;/script&gt;</p>
         <br>
         <p>This uses the HTML Intersection Observer API and is built into the component.</p>
       </div>
