--- a/06-library/20-ndc-site/login.html
+++ b/06-library/20-ndc-site/login.html
@@ -7,8 +7,8 @@
   <link href="site.css" rel="stylesheet">
   <title>Document</title>
   <style>
-    main{
-      max-width:700px;
+    main {
+      max-width: 700px;
     }
   </style>
 </head>
@@ -19,6 +19,12 @@
   </nav>
   <main>
     <div id="content">
+      <h2>All grey box is the web component &lt;wp-login&gt;</h2>
+      <br>
+      <p>In this component, we authenticate the user against a WordPress site.</p>
+      <p>We can return a range of data and in this instance a JSON Web Token, JWT, is created and returned to the page.</p>
+      <p>This token can contains the user id and creation date. It can be stored in localStorage or in a cookie and passed with requests that need user authentication.</p>
+      <br>
       <!-- ///////////  WEB COMPONENT    //////////////-->
       <script src="../08-ndc-authenticate/login.js" type="module"></script>
       <wp-login></wp-login>
