--- a/06-library/20-ndc-site/dynamic.html
+++ b/06-library/20-ndc-site/dynamic.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="site.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>02-ndc-show-post-dynamic</title>
+    <title>DYNAMIC</title>
 <body>
    <nav>
       <script src="../15-ndc-navbar/nav.js"></script>
