--- a/06-library/20-ndc-site/index.html
+++ b/06-library/20-ndc-site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="site.css" rel="stylesheet">
-    <title>Document</title>
+    <title>INDEX</title>
 </head>
 <body>
     <nav>
