--- a/04-css/css-03-slotted.html
+++ b/04-css/css-03-slotted.html
@@ -19,7 +19,7 @@
       
         /* this will work as element is in light dom */
         #nested { 
-            color:purple;
+            /* color:purple; */
         } 
         /* this would work too... */
         /* span {
@@ -74,7 +74,7 @@
                 letter-spacing:2px;
             }
             ::slotted(#nested){
-                color:purple;
+                color:red;
                 font-size:2.0rem;
                 letter-spacing:2px;
             }
