--- a/04-css/css-05-host-context.html
+++ b/04-css/css-05-host-context.html
@@ -26,7 +26,7 @@
                 font-size: var(--primary-size, 18px);
             } 
             :host-context(#showContext) {
-                color: pink;
+                color: blue;
                 font-weight: bold;
                 font-size: 2.0rem;
             }
