--- a/05-events/06-showAllPostsRange.html
+++ b/05-events/06-showAllPostsRange.html
@@ -52,7 +52,7 @@
         btn.addEventListener('click', function() {
           const webComponent = document.querySelector('show-all-posts-range');
           webComponent.setAttribute('range', stringRange);
-          webComponent.setAttribute('test', 20);
+          //webComponent.setAttribute('test', 20);
         })
       </script>
     
