--- a/06-library/03-ndc-show-all-posts/showAllPostsCatgerory.html
+++ b/06-library/03-ndc-show-all-posts/showAllPostsCatgerory.html
@@ -29,15 +29,15 @@
       <br>
       <p>
         <strong>Explanantion: </strong>We load all posts in <br><a
-          href='../_data/cat24.json'
+          href='https://49plus.co.uk/udemy/wp-json/wp/v2/posts?categories=4'
           target='_new'>../-data/cat24.json</a><br> and then display certain
         fields.
       </p>
 
 
       <!-- WEB COMPONENT -->
-
-      <show-all-posts-category></show-all-posts-category>
+      <!-- cat 4 or 6 for 49plus - 6,7,24,25. 26 for wpjs -->
+      <show-all-posts-category cat="26"></show-all-posts-category>
       <script src="showAllPostsCategory.js" type="module"></script>
       <!-- WEB COMPONENT -->
 
