--- a/06-library/20-ndc-site/read.html
+++ b/06-library/20-ndc-site/read.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
    <link href="site.css" rel="stylesheet">
-   <title>READ</title>
+   <title>Document</title>
+
 </head>
+
 <body>
    <nav>
       <script src="../15-ndc-navbar/nav.js"></script>
@@ -51,12 +54,19 @@
       </script>
       <wp-indexeddb-read cat="24"></wp-indexeddb-read>
    </main>
+
    <footer>
       <!-- WEB COMPONENT -->
+
+     
+
       <!-- WEB COMPONENT -->
    </footer>
+   
    <script src="../10-ndc-indexeddb/wp-indexeddb-read.js" type="module"></script>
    <script src="../15-ndc-navbar/back-to-top.js"></script>
+   
    <back-to-top></back-to-top>
+
 </body>
 </html>
