--- a/04-css/css-01-light.html
+++ b/04-css/css-01-light.html
@@ -14,7 +14,7 @@
     <style>
         /* Custom CSS Variables */
         :root {
-            --primary-color: red;
+            --primary-color: purple;
             --primary-size: 25px;
         }
            
