--- a/04-css/css-04-host.html
+++ b/04-css/css-04-host.html
@@ -60,7 +60,7 @@
               font-size:3rem;
           }
           :host(#showHost) {
-           color:purple;
+           color:red;
            display: block; /*important*/
            padding:50px;
            border: 2px dashed purple;
