--- a/06-library/20-ndc-site/index.html
+++ b/06-library/20-ndc-site/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="site.css" rel="stylesheet">
-    <title>INDEX</title>
+    <link rel="manifest" href="./manifest.json">
+    <title>Document</title>
+  
 </head>
 <body>
     <nav>
