--- a/01-custom-elements/05-define-component-name-page.html
+++ b/01-custom-elements/05-define-component-name-page.html
@@ -20,7 +20,7 @@
     <script src="05.js"></script>
     <!-- We can let user define the component name -->
     <script>
-        customElements.define('user-selected-name', WebComponentClass); // no definition in WebComponentClass      
+        customElements.define('user-21', WebComponentClass); // no definition in WebComponentClass      
     </script>
   
     <main>
@@ -32,7 +32,7 @@
             <div class="spacer"></div>
             <div id="output">
                 <!-- OUTPUT OF CUSTOM ELEMENT -->
-                <user-selected-name></user-selected-name>
+                <user-21></user-21>
 
             </div>
             <div class="spacer"></div>
