--- a/05-events/01-light-events.html
+++ b/05-events/01-light-events.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>01-light-events</title>
 </head>
+
 <body>
     <style>
         button {
@@ -21,36 +23,7 @@
             margin-top: 20px;
         }
     </style>
-    <script>
-        const template = document.createElement('template');
-        template.innerHTML = `
-            <h2>CLICK ME: EVENTS IN WEB COMPONENTS</h2>
-        `;
-        class MyComponent extends HTMLElement {
-            // constructor() creates class
-            // not yet part of the DOM
-            constructor() {
-                super(); // this is needed to inherit HTMLElement properties and is standard JavaScript
-                console.log('Component created…');
-                const shadowRoot = this.attachShadow({
-                    mode: 'open'
-                });
-                this.shadowRoot.appendChild(template.content.cloneNode(true));
-                // declare a variable - JS has no private variables. 
-                this.pubVal = "initial value set in constructor";
-            }
-            connectedCallback() { // this as an event when the component is attached to the DOM     
-                console.log('Component now part of DOM…');
-            }
-            // create a method - JS has no private methods.
-            publicMethod(val) {
-                alert('[FN] Public Method in Web Component called...' + val);
-                console.log('Public Method in Web Component called...[VALUE] ' + val + ' passed in');
-            }
-        }
-        // We connect the custom HTML element ‘my-component’ with the class MyComponent
-        customElements.define('my-component', MyComponent);
-    </script>
+
     <main>
         <div class="wrapper">
             <div class="explanation">
@@ -91,8 +64,39 @@
             console.log('NEW Pub Val: ' + customComponent.pubVal);
         });
         btnMethod.addEventListener('click', function () {
-            customComponent.publicMethod(22);
+            customComponent.publicMethod(Math.floor(Math.random() * 1000));
         });
+    </script>
+    <script>
+        const template = document.createElement('template');
+        template.innerHTML = `
+                <h2>CLICK ME: EVENTS IN WEB COMPONENTS</h2>
+            `;
+        class MyComponent extends HTMLElement {
+            // constructor() creates class
+            // not yet part of the DOM
+            constructor() {
+                super(); // this is needed to inherit HTMLElement properties and is standard JavaScript
+                console.log('Component created…');
+                const shadowRoot = this.attachShadow({
+                    mode: 'open'
+                });
+                this.shadowRoot.appendChild(template.content.cloneNode(true));
+                // declare a variable - JS has no private variables. 
+                this.pubVal = "initial value set in constructor";
+                console.log("CONSTRUCTOR pubVal: ", this.pubVal)
+            }
+            connectedCallback() { // this as an event when the component is attached to the DOM     
+                console.log('Component now part of DOM…');
+            }
+            // create a method - JS has no private methods.
+            publicMethod(val) {
+                //alert('[FN] Public Method in Web Component called...' + val);
+                console.log('Public Method in Web Component called...[VALUE] ' + val + ' passed in');
+            }
+        }
+        // We connect the custom HTML element ‘my-component’ with the class MyComponent
+        customElements.define('my-component', MyComponent);
     </script>
     <footer>
         <div class="w3-container w3-blue w3-center footer">
@@ -100,4 +104,5 @@
         </div>
     </footer>
 </body>
+
 </html>
