--- a/05-events/06-showAllPostsRange.html
+++ b/05-events/06-showAllPostsRange.html
@@ -28,47 +28,49 @@
         <button class="w3-button w3-blue" id="btnChange">Set range: 10 - 30</button>
       </p>
       <p>
-        <strong>Explanantion: </strong>We load all posts in <br><a
-          href='06-data.json'
+        <strong>Explanantion: </strong>We load all posts in <br><a href='06-data.json'
           target='_new'>../_data/jsonplaceholderposts100.json.</a><br>
       </p>
       <p>
         We can set attributes of MIN and MAX on the HTML tag in the Light DOM.
       </p>
       <p>
-        However, if we are changing these values programatically then it is best to have just one attribute because the event is fired every time an attribute is changed and this might involve an AJX request for data.
+        However, if we are changing these values programatically then it is best to have just one attribute because the
+        event is fired every time an attribute is changed and this might involve an AJX request for data.
       </p>
-      <p>Thus it is better to combine more than one property into one object, JSON.stringify it and pass it to the component.</p>
-      <p><b>disconnectedCallback life cycle event dmonstrated...</b></p>
+      <p>Thus it is better to combine more than one property into one object, JSON.stringify it and pass it to the
+        component.</p>
+      <p><b>disconnectedCallback life cycle event demonstrated...</b></p>
       <script>
-        const objRange =  {
-          min: 33,
+        const objRange = {
+          min: 30,
           max: 50
         };
         console.log(objRange);
         const stringRange = JSON.stringify(objRange);
         console.log(stringRange);
         const btn = document.getElementById('btnChange');
-        btn.addEventListener('click', function() {
+        btn.addEventListener('click', function () {
           const webComponent = document.querySelector('show-all-posts-range');
           webComponent.setAttribute('range', stringRange);
-          //webComponent.setAttribute('test', 20);
+
         })
       </script>
-    
+
       <p>-----------------------------------------------------</p>
       <div id="output">
 
         <!-- WEB COMPONENT -->
         <!-- initial values of range set in class constructor - these can be removed and set here in range attribute -->
-        <show-all-posts-range range test="5"></show-all-posts-range>
+        <show-all-posts-range></show-all-posts-range>
         <!-- WEB COMPONENT -->
       </div>
       <div class="spacer"></div>
       <div class="exercise">
-          <h3>EXERCISE:</h3>
-          <p>In DEV TOOLS > Elements change the value of 'displaytext' in div#output to see how the attribute change is reflected into component.</p>
-          <p>When you click on TOOLTIP you will se new text being shown.</p>
+        <h3>EXERCISE:</h3>
+        <p>In DEV TOOLS > Elements change the value of 'displaytext' in div#output to see how the attribute change is
+          reflected into component.</p>
+        <p>When you click on TOOLTIP you will se new text being shown.</p>
       </div>
     </div>
     <br><br>
